--- a/src/composer.json
+++ b/src/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "laravel/socialite": "^2.0"
+        "laravel/socialite": "^2.0",
+        "askedio/laravel5-google-calendar": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
